Fix for pickers having text overflow

--- a/.themes/NewSpring/Styles/overrides/rock/_pickers.less
+++ b/.themes/NewSpring/Styles/overrides/rock/_pickers.less
@@ -5,7 +5,7 @@
   }
   
   .dropdown-menu {
-    width: 100%;
+    max-width: 80vw;
     
     .scroll-container {
       width: 100%;
